syntax = "proto3";

option java_multiple_files = true;
option java_package = "github.io.pedrogao.mq.message";
option java_outer_classname = "MessageProto";

package message;

message MessagePack {
  repeated bytes payloads = 1;
}